@@ -11,6 +11,7 @@ rx0parameters=ON
 rx0sound=ON
 rx0fastlock=ON
 rx0label=Preset_1
+rx0vlc=OFF
 rx1frequency=145.9
 rx1sr=333
 rx1fec=7
